--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "tachyons": "^4.10.0"
   },
   "dependencies": {
+    "@types/react": "^16.8.1",
+    "@types/react-dom": "^16.0.11",
+    "@types/styled-components": "^4.1.6",
+    "@zeit/next-typescript": "^1.1.1",
     "next": "^7.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
