--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next build && next export"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.0",
     "tachyons": "^4.10.0"
   },
   "dependencies": {
@@ -15,6 +17,7 @@
     "next": "^7.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "terser": "^3.14.1"
   }
 }
