--- a/package.json
+++ b/package.json
@@ -10,14 +10,24 @@
     "tachyons": "^4.10.0"
   },
   "dependencies": {
+    "@types/next": "^7.0.8",
     "@types/react": "^16.8.1",
     "@types/react-dom": "^16.0.11",
     "@types/styled-components": "^4.1.6",
     "@zeit/next-typescript": "^1.1.1",
+    "classnames": "^2.2.6",
+    "execa": "^1.0.0",
     "next": "^7.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "rehype-raw": "^4.0.0",
+    "rehype-react": "^3.1.0",
+    "remark-frontmatter": "^1.3.1",
+    "remark-highlight.js": "^5.1.0",
+    "remark-parse": "^6.0.3",
+    "remark-rehype": "^4.0.0",
     "styled-components": "^4.1.3",
-    "terser": "^3.14.1"
+    "terser": "^3.14.1",
+    "unified": "^7.1.0"
   }
 }
