--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
     "compilerOptions": {
       "allowJs": true,
       "allowSyntheticDefaultImports": true,
+      "baseUrl": "./",
+      "paths" : {
+        "src/*": ["./src/*"]
+      },
       "jsx": "preserve",
       "lib": ["dom", "es2017"],
       "module": "esnext",
