--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "export": "next build && next export"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.10.0",
-    "tachyons": "^4.10.0"
+    "babel-plugin-styled-components": "^1.10.0"
   },
   "dependencies": {
     "@types/next": "^7.0.8",
@@ -27,7 +26,6 @@
     "remark-parse": "^6.0.3",
     "remark-rehype": "^4.0.0",
     "styled-components": "^4.1.3",
-    "terser": "^3.14.1",
     "unified": "^7.1.0"
   }
 }
