--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "remark-parse": "^6.0.3",
     "remark-rehype": "^4.0.0",
     "styled-components": "^4.1.3",
+    "underscore": "^1.9.1",
     "unified": "^7.1.0"
   }
 }
