--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "export": "next build && next export"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.10.0"
+    "babel-plugin-styled-components": "^1.10.0",
+    "typescript": "^3.4.5"
   },
   "dependencies": {
     "@types/next": "^7.0.8",
@@ -14,9 +15,8 @@
     "@types/react-dom": "^16.0.11",
     "@types/styled-components": "^4.1.6",
     "@zeit/next-source-maps": "0.0.3",
-    "@zeit/next-typescript": "^1.1.1",
     "classnames": "^2.2.6",
-    "next": "^8.0.3",
+    "next": "^8.1.1-canary.39",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "rehype-raw": "^4.0.0",
