--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@types/underscore": "^1.8.18",
     "@types/webpack-env": "^1.13.9",
     "babel-plugin-styled-components": "^1.10.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.3"
   },
   "dependencies": {
     "@types/next": "^7.0.8",
@@ -18,9 +18,9 @@
     "@types/styled-components": "^4.1.6",
     "@zeit/next-source-maps": "0.0.3",
     "classnames": "^2.2.6",
-    "next": "^8.1.1-canary.50",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "next": "^9.0.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "rehype-raw": "^4.0.0",
     "rehype-react": "^3.1.0",
     "remark-frontmatter": "^1.3.1",
