--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export"
+    "export": "next build && next export",
+    "deploy": "aws s3 sync out/ s3://karlshouler.com --acl public-read --profile default",
+    "invalidate": "aws cloudfront create-invalidation --distribution-id E8R5YE3OU9K84 --paths '/*' --profile default",
+    "shipit": "npm run deploy && npm run invalidate"
   },
   "devDependencies": {
     "@types/underscore": "^1.8.18",
