Upgrade to Next 14.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export",
+    "export": "next build",
     "stage": "aws s3 sync out/ s3://staging.karlshouler.com --delete --acl public-read --profile default",
     "deploy": "aws s3 sync out/ s3://karlshouler.com --delete --acl public-read --profile default",
     "invalidate": "aws cloudfront create-invalidation --distribution-id E8R5YE3OU9K84 --paths '/*' --profile default",
@@ -22,7 +22,8 @@
     "@types/styled-components": "^5.1.26",
     "@zeit/next-source-maps": "0.0.3",
     "classnames": "^2.2.6",
-    "next": "^13.0.2",
+    "eslint-config-next": "^14.2.3",
+    "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-raw": "^4.0.2",
